[tool.poetry]
name = "weighted-rank-correlation"
version = "0.3.0"
description = ""
authors = ["Stefan Heid <stefan.heid@upb.de>", "Jonas Hanselle <jonas.hanselle@ifi.lmu.de>"]
readme = "README.md"
packages = [{ include = "gamma_correlation" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cuml = "^23.10.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
